Fix navbar collapse when clicking off of it?

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,6 +48,17 @@
 #tab-content p.is-active {
 	display: block;
 }
+.nav-background {
+  background-color: rgba(10, 10, 10, 0.86);
+	bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+	z-index: 1;
+	position: absolute;
+	display: none;
+}
+
 /* navbar black-ter */
 .navbar.is-black-ter {
 	background-color: #242424;
@@ -149,6 +160,27 @@ a:hover, a:focus {
 	width: 100%;
 	height: 100%;
 }
+.navbar.is-black-ter .navbar-start > .navbar-item,.navbar.is-black-ter .navbar-start .navbar-link,.navbar.is-black-ter .navbar-end > .navbar-item,.navbar.is-black-ter .navbar-end .navbar-link {
+	color: white;
+}
+.navbar.is-black-ter .navbar-start > a.navbar-item:focus, .navbar.is-black-ter .navbar-start > a.navbar-item:hover, .navbar.is-black-ter .navbar-start > a.navbar-item.is-active,.navbar.is-black-ter .navbar-start .navbar-link:focus,.navbar.is-black-ter .navbar-start .navbar-link:hover,.navbar.is-black-ter .navbar-start .navbar-link.is-active,.navbar.is-black-ter .navbar-end > a.navbar-item:focus,.navbar.is-black-ter .navbar-end > a.navbar-item:hover,.navbar.is-black-ter .navbar-end > a.navbar-item.is-active,.navbar.is-black-ter .navbar-end .navbar-link:focus,.navbar.is-black-ter .navbar-end .navbar-link:hover,.navbar.is-black-ter .navbar-end .navbar-link.is-active {
+	background-color: #161616;
+	color: white;
+}
+.navbar.is-black-ter .navbar-start .navbar-link::after,.navbar.is-black-ter .navbar-end .navbar-link::after {
+	border-color: white;
+}
+.navbar.is-black-ter .navbar-item.has-dropdown:focus .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown:hover .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown.is-active .navbar-link {
+	background-color: #161616;
+	color: white;
+}
+.navbar.is-black-ter .navbar-dropdown a.navbar-item.is-active {
+	background-color: #161616;
+	color: white;
+}
+.navbar-divider {
+	display: block;
+}
 
 @media only screen and (max-device-width: 480px) {
 	html {
@@ -161,24 +193,6 @@ a:hover, a:focus {
 		margin-right: 5%;
 		width: 45px;
 		height: 45px;
-	}
-	.navbar.is-black-ter .navbar-start > .navbar-item,.navbar.is-black-ter .navbar-start .navbar-link,.navbar.is-black-ter .navbar-end > .navbar-item,.navbar.is-black-ter .navbar-end .navbar-link {
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-start > a.navbar-item:focus, .navbar.is-black-ter .navbar-start > a.navbar-item:hover, .navbar.is-black-ter .navbar-start > a.navbar-item.is-active,.navbar.is-black-ter .navbar-start .navbar-link:focus,.navbar.is-black-ter .navbar-start .navbar-link:hover,.navbar.is-black-ter .navbar-start .navbar-link.is-active,.navbar.is-black-ter .navbar-end > a.navbar-item:focus,.navbar.is-black-ter .navbar-end > a.navbar-item:hover,.navbar.is-black-ter .navbar-end > a.navbar-item.is-active,.navbar.is-black-ter .navbar-end .navbar-link:focus,.navbar.is-black-ter .navbar-end .navbar-link:hover,.navbar.is-black-ter .navbar-end .navbar-link.is-active {
-		background-color: #161616;
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-start .navbar-link::after,.navbar.is-black-ter .navbar-end .navbar-link::after {
-		border-color: white;
-	}
-	.navbar.is-black-ter .navbar-item.has-dropdown:focus .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown:hover .navbar-link,.navbar.is-black-ter .navbar-item.has-dropdown.is-active .navbar-link {
-		background-color: #161616;
-		color: white;
-	}
-	.navbar.is-black-ter .navbar-dropdown a.navbar-item.is-active {
-		background-color: #161616;
-		color: white;
 	}
 	.navbar-divider {
     display: block;
